--- a/Supplementary Figure S7.Rmd
+++ b/Supplementary Figure S7.Rmd
@@ -1,5 +1,10 @@
 ---
 title: "Mutational signatures impact the evolution of anti-EGFR antibody resistance in coloectal cancer"
+knit: (function(input_file, encoding) {
+  out_dir <- 'docs';
+  rmarkdown::render(input_file,
+ encoding=encoding,
+ output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 subtitle: "Figure S7"
 author: "Andrew Woolston"
 date: "06/01/2021"
